# gauntlet

./: .gitignore  AGENTS.md  BOOTSTRAP-NOTES.md  CHANGELOG.md  CLAUDE.md  FUTURE.md  LICENSE  PRD-gauntlet.md  README.md  policy.yaml  pyproject.toml
.claude/: settings.json
.claude/skills/gauntlet-operator/: SKILL.md
.claude/skills/gauntlet-prd-author/: SKILL.md
.codex/: hooks.json
.gauntlet/: config.yaml  pins.yaml
.github/workflows/: release.yml
pipelines/: bootstrap.yaml  review.yaml  standard.yaml
prompts/: CHANGELOG.md  bootstrap-implement-p5.md  bootstrap-implement-p6.md  bootstrap-implement-p7.md  commit-message.md  cycle-confirm.md  cycle-fix.md  cycle-review.md  implement-phase.md  operator.md  prd-author.md  proposal-synthesis.md  retro.md  review-code.md  review-document.md  triage-corpus.jsonl  triage.md
proposals/: interactive-prd-authoring.md  pr-read-commands.md  run-branch-lifecycle.md
runs/background-start-services/: PR.md  plan.md  prd.md
runs/background-start-services/run-2026-06-26T16-42-42/: RUN.md  manifest.json
runs/builder-effort-level/: prd.md
runs/gauntlet/: CONTINUE-P3-PROMPT.md  CONTINUE-P4-PROMPT.md  IMPLEMENT-PROMPT.md  plan.md
runs/gauntlet-bootstrap/: PR.md  active-run.txt  prd.md
runs/gauntlet-bootstrap/manual/: p4-triage-accuracy.md
runs/gauntlet-resume-response/: PR.md  plan.md  prd.md
runs/gauntlet-ui/: PR.md  plan.md  prd.md
runs/lightweight-issue-workflow/: PR.md  plan.md  prd.md
runs/lightweight-issue-workflow/run-2026-06-30T19-01-19/: RUN.md  manifest.json
runs/live-run-observability/: PR.md  plan.md  prd.md
runs/live-run-observability/run-2026-06-26T03-33-24/: RUN.md  manifest.json
runs/operator-aids/: PR.md  plan.md  prd.md
runs/operator-aids/qualification/: fr-6-6-trigger.md
runs/operator-aids/run-2026-06-25T16-41-22/: RUN.md  manifest.json
runs/prd-authoring-aids/: DOGFOOD-RUNBOOK.md  OPERATOR-OVERRIDE-impl-cycle-0.md  plan.md  prd.md
runs/prd-authoring-aids/run-2026-06-23T21-42-02/: RUN.md  manifest.json
runs/run-summary/: prd.md
schemas/: proposals.json  resume-disposition.json  skill-frontmatter.json  status.json  triage.json
src/gauntlet/: __init__.py  __main__.py  cli.py  config.py  interactive.py  pins.py  procident.py
src/gauntlet/adapters/: __init__.py  _structured.py  api.py  base.py  claude_code.py  codex.py  process.py
src/gauntlet/engine/: __init__.py  commit_format.py  config.py  cycle.py  detect.py  doctor.py  execution.py  expr.py  feedback.py  gitops.py  identity.py  init.py  judgeproc.py  manifest.py  operator.py  orchestrator.py  pipeline.py  planphases.py  pr.py  prd_stub.py  proposals.py  report.py  retro.py  review.py  reviewpr.py  run.py  skill.py  steptypes.py  trend.py  triage_eval.py  validate.py
tests/integration/: conftest.py  test_api_contract.py  test_claude_contract.py  test_codex_contract.py  test_codex_sandbox.py  test_cycle_contract.py  test_install_second_env.py  test_judge_live.py  test_linear_contract.py  test_operator_skill_trigger.py  test_pipeline_contract.py  test_skill_trigger.py  test_standard_pipeline_e2e.py  test_triage_accuracy.py  test_web_smoke.py
tests/unit/: _crash_child.py  conftest.py  test_api_adapter.py  test_asset_root.py  test_bootstrap_pipeline.py  test_claude_adapter.py  test_cli_serve_resume.py  test_cli_status_traversal.py  test_cli_version.py  test_cli_watch.py  test_codex_adapter.py  test_commit_format.py  test_console_freshness.py  test_cycle.py  test_cycle_resume_response.py  test_detect.py  test_doctor.py  test_expr.py  test_feedback.py  test_flag_lint.py  test_gitops.py  test_hook_client.py  test_hook_launcher.py  test_human_response_manifest.py  test_init.py  test_interactive.py  test_judge_classification.py  test_judge_core.py  test_judge_service.py  test_judgeproc.py  test_logs.py  test_logs_follow.py  test_manifest.py  test_operator.py  test_operator_identity.py  test_operator_skill.py  test_orchestrator.py  test_pins.py  test_pipeline_loader.py  test_plan_phases.py  (+53 more)
(+112 files in other folders)
