[project]
name = "gauntlet-spec"
version = "0.2.0"
description = "Adversarial multi-agent development harness: PRD -> plan -> phased implementation, every artifact reviewed adversarially"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "John Pletka", email = "john.pletka@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "litellm>=1.40",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    # Console (web/) promotes two already-transitive deps to explicit so a
    # future fastapi/litellm bump cannot silently drop them (FR-11.3): jinja2
    # renders the server-side pages (P1), httpx posts Slack notifications (P6).
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/johnpletka/gauntlet"
Repository = "https://github.com/johnpletka/gauntlet"
Issues = "https://github.com/johnpletka/gauntlet/issues"

[project.scripts]
gauntlet = "gauntlet.cli:app"
# Lightweight per-tool-call hook entry point (stdlib-only logic); wired into
# .claude/settings.json PreToolUse. Kept separate from the typer app so a
# hook invocation does not pay for the full CLI import graph.
gauntlet-judge-hook = "gauntlet.judge.hook_client:main"

# FR-2.4: adapters are plugins registered via entry points; the built-in three
# register the same way a third-party adapter would.
[project.entry-points."gauntlet.adapters"]
claude-code = "gauntlet.adapters.claude_code:ClaudeCodeAdapter"
codex = "gauntlet.adapters.codex:CodexAdapter"
api = "gauntlet.adapters.api:ApiAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gauntlet"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live CLI/API credentials; excluded by default",
]
# `uv run pytest` runs units only; `uv run pytest -m integration` overrides.
addopts = "-m 'not integration'"
